Opened 7 years ago
Closed 6 years ago
#14182 closed bug (fixed)
[ipro1000] KDL in if_getdrvflags
Reported by: | diver | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Network/ipro1000 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #14046 | |
Platform: | All |
Description
Attachments (3)
Change History (18)
by , 7 years ago
Attachment: | ipro1000.png added |
---|
by , 7 years ago
Attachment: | ipro1000_threads.png added |
---|
comment:6 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Han't had a chance to test it and it happened only twice within 2 weeks. So let's assume it's been fixed, I'll reopen if needed :P
comment:7 by , 7 years ago
Blocking: | 14046 added |
---|
comment:8 by , 6 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Happened again on boot after update to hrev52185.
comment:9 by , 6 years ago
We have kind of a "desperate" need for this driver to be stable. Hoping we can get there!
comment:10 by , 6 years ago
@dsuden, is it happening for you on real hardware? AFAIK nobody has seen this outside of VMware.
comment:11 by , 6 years ago
Yes, I get it fairly regularly. So do some of my customers. I don't think I have a screen grab remaining, but I'll look.
comment:13 by , 6 years ago
comment:14 by , 6 years ago
@dsuden, can you find me on IRC, please?
At any rate, regarding this actual ticket: It appears that the IRQ setup where the task is created and queued happens before the IFP is initialized: http://xref.plausible.coop/source/xref/freebsd-11-stable/sys/dev/e1000/if_lem.c#695 (allocate_irq enqueues the task, setup_interface initializes the IFP), so this appears to be a bug in FreeBSD code. I'll ask around.
comment:15 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Should be fixed in hrev52250.
Could you dump the stacktraces of other ipro1000 related threads? It's not clear in which state the driver is when this panic happens.