freebsd11_network: Add NULL check to if_getdrvflags.

This is the proper fix for #14182, as discussed on the mailing list.